added support for all MAL statuses + songs from episodes you haven't watches yet will no longer appear