@@ -33,37 +33,40 @@ public class BalancedBalancer extends Balancer {
         }
 
 
-        List<Long> masterThemeList = Stream.concat(
-                users.stream().map(user -> user.getMalIds(Constants.myanimelist.status.completed.toString())).flatMap(Set::stream),
-                users.stream().map(user -> user.getMalIds(Constants.myanimelist.status.watching.toString())).flatMap(Set::stream)
-        )
+        List<Long> masterThemeList = users.stream()
+                .map(user -> user.getMalIdsByStatus(filter.getAllowedStatuses()))
+                .flatMap(Set::stream)
+                .distinct()
                 .filter(id -> filter.isValidAnime(id))
-                .flatMap(id -> animeBank.get(id).getThemeSet().stream())
+                .flatMap(id -> animeBank.get(id).getThemeSet().entrySet().stream()
+                        .filter(themeIdEntry -> users.stream()
+                                .map(user -> user.getCurrentEpisodeNum(id))
+                                .anyMatch(episodeNum -> themeIdEntry.getValue() <= episodeNum)))
+                .map(Map.Entry::getKey)
                 .filter(id -> filter.isValidTheme(id))
-                .collect(Collectors.toList());
+                .toList();
 
         List<IwaUser> userList = users.stream().filter(user -> filter.isValidUser(user.getMalId())).toList();
 
-        if (userList.size() == 0) {
+        if (userList.isEmpty()) {
             throw new Exception("Could not find any songs matching your filters! Try adjusting them or adding more users.");
         }
         else {
             Random r = new Random();
             IwaUser selectedUser = userList.get(r.nextInt(userList.size()));
 
-            List<Long> themeList = Stream.concat(
-                    selectedUser.getMalIds(Constants.myanimelist.status.completed.toString()).stream(),
-                    selectedUser.getMalIds(Constants.myanimelist.status.watching.toString()).stream()
-            )
+            List<Long> themeList = selectedUser.getMalIdsByStatus(filter.getAllowedStatuses()).stream()
                     .filter(id -> filter.isValidAnime(id))
-                    .flatMap(id -> animeBank.get(id).getThemeSet().stream())
+                    .flatMap(id -> animeBank.get(id).getThemeSet().entrySet().stream()
+                            .filter(themeIdEntry -> themeIdEntry.getValue() <= selectedUser.getCurrentEpisodeNum(id)))
+                    .map(Map.Entry::getKey)
                     .filter(id -> filter.isValidTheme(id))
                     .collect(Collectors.toList());
 
             this.validSongCount = masterThemeList.size();
             List<Long> blackListAppliedThemeList = themeList.stream().filter(id -> !themeBlackList.contains(id)).collect(Collectors.toList());
 
-            if (blackListAppliedThemeList.size() == 0) {
+            if (blackListAppliedThemeList.isEmpty()) {
                 logger.warn("All valid songs are blacklisted, clearing blacklist and returning a song.");
                 themeBlackList.clear();
                 blackListAppliedThemeList = themeList;
